--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-jss": "^10.0.0",
     "react-scripts": "3.3.0",
     "typescript": "^3.7.4",
     "xml2js": "^0.4.23"
