--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.12.22",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-modal": "^3.10.1",
+    "@types/react-youtube": "^7.6.2",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
@@ -26,7 +28,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-jss": "^10.0.0",
+    "react-modal": "^3.11.1",
     "react-scripts": "3.3.0",
+    "react-youtube": "^7.9.0",
     "typescript": "^3.7.4",
     "xml2js": "^0.4.23"
   },
