--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-modal": "^3.10.1",
+    "@types/react-select": "^3.0.8",
     "@types/react-youtube": "^7.6.2",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
@@ -30,6 +31,7 @@
     "react-jss": "^10.0.0",
     "react-modal": "^3.11.1",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "react-youtube": "^7.9.0",
     "typescript": "^3.7.4",
     "xml2js": "^0.4.23"
